--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,42 @@
+server:
+  port: 8080
+  servlet:
+    context-path: /api/
 
+spring:
+  application:
+    name: vendame-loja
+
+  jpa:
+    database: POSTGRESQL
+    show-sql: true
+    open-in-view: false
+
+    hibernate:
+      generate-ddl: false
+      ddl-auto: none
+
+    properties:
+      hibernate:
+        format_sql: true
+
+  datasource:
+    url: jdbc:postgresql://localhost:5432/postgres?useTimezone=true&serverTimezone=America/Sao_Paulo
+    username: postgres
+    password: postgres
+    driverClassName: org.postgresql.Driver
+
+  liquibase:
+    enabled: true
+    default-schema: public
+    url: ${spring.datasource.url}
+    user: ${spring.datasource.username}
+    password: ${spring.datasource.password}
+    change-log: classpath:db/changelog-master.xml
+
+  servlet:
+    multipart:
+      enabled: true
+      file-size-threshold: 2KB
+      max-file-size: 2MB
+      max-request-size: 5MB
